--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,6 +119,29 @@
             android:layout_toRightOf="@+id/textView7"
             android:layout_toEndOf="@+id/textView7"
             android:layout_marginLeft="@dimen/margin_small" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Website:"
+            android:id="@+id/textView9"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            android:layout_below="@+id/textView7"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="www.dominos.com.br"
+            android:id="@+id/textView10"
+            android:layout_alignBottom="@+id/textView9"
+            android:layout_toRightOf="@+id/textView9"
+            android:layout_toEndOf="@+id/textView9"
+            android:layout_marginLeft="@dimen/margin_small" />
     </RelativeLayout>
 
 </ScrollView>
